Bug 1930956 - [devtools] Adapt Callstack panel to High Contrast Mode. r=bomsy.
Use --theme-selection-color instead of white.
Don't lower opacity on frames and use dedicated variable instead.
Tweak some selectors to make sure the panel looks good in all situations.

Differential Revision: https://phabricator.services.mozilla.com/D228841

UltraBlame original commit: f0ee5c1b29812b72f495bd2250bc7a33e26b83e8

--- a/devtools/client/debugger/src/components/SecondaryPanes/Frames/Frames.css
+++ b/devtools/client/debugger/src/components/SecondaryPanes/Frames/Frames.css
@@ -217,6 +217,17 @@ weight
 :
 normal
 ;
+color
+:
+var
+(
+-
+-
+theme
+-
+comment
+)
+;
 margin
 :
 0
@@ -351,58 +362,6 @@ theme
 -
 comment
 )
-;
-}
-.
-theme
--
-light
-.
-frames
-.
-location
-{
-color
-:
-var
-(
--
--
-theme
--
-comment
-)
-;
-}
-:
-root
-.
-theme
--
-dark
-.
-frames
-.
-location
-{
-color
-:
-var
-(
--
--
-theme
--
-body
--
-color
-)
-;
-opacity
-:
-0
-.
-6
 ;
 }
 .
@@ -630,6 +589,12 @@ listitem
 "
 ]
 :
+not
+(
+.
+selected
+)
+:
 focus
 .
 theme
@@ -652,31 +617,11 @@ listitem
 "
 ]
 :
-focus
+not
+(
 .
-async
--
-label
-.
-theme
--
-dark
-.
-frames
-[
-role
-=
-"
-list
-"
-]
-[
-role
-=
-"
-listitem
-"
-]
+selected
+)
 :
 focus
 .
@@ -760,7 +705,16 @@ background
 ;
 color
 :
-white
+var
+(
+-
+-
+theme
+-
+selection
+-
+color
+)
 ;
 }
 .
@@ -869,7 +823,16 @@ path
 {
 fill
 :
-white
+var
+(
+-
+-
+theme
+-
+selection
+-
+color
+)
 ;
 }
 :
@@ -927,7 +890,16 @@ location
 {
 color
 :
-white
+var
+(
+-
+-
+theme
+-
+selection
+-
+color
+)
 ;
 }
 .
